--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="image_background">Image background</string>
+    <string name="desired_league">Desired league</string>
+    <string name="mens">Mens</string>
+    <string name="mens_selected">Mens selected</string>
+    <string name="womens">Womens</string>
+    <string name="womens_selected">Womens selected</string>
+    <string name="co_ed">CO-ED</string>
+    <string name="co_ed_selected">CO-ED selected</string>
+    <string name="next">NEXT</string>
+    <string name="swoosh_logo">Swoosh logo</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="on_going_all_out">ON GOING ALL OUT</string>
+    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
+    <string name="get_started">GET STARTED</string>
 </resources>
