Added skills layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="baller">BALLER</string>
     <string name="beginger">BEGINGER</string>
     <string name="finish">FINISH</string>
+    <string name="search_league">Looking for a co-ed beginger league near you ...</string>
 </resources>
